* Export PluginManager::attention to scripts
* Update Boost to version 1.44
* [L#537905] Add redhat init scripts (thanks E_zombie)

-- 2.5.2 2010-07-23 --
* Compiled with C++0x support
* Update Boost to version 1.43
* Improve Lua scripts
* More performant and less crash-prone timers

-- 2.5.1 2010-06-20 --
* [L#591701] Fix compiling out of the bzr repo
* Fix the "unloading" event which was never being called
* Unload scripts in the reverse order of addition
* Improve Lua scripts
* [L#596669] Disconnect ghosts

-- 2.5.0 2010-05-03 --
* Improve Lua scripts: various bug fixes, support PING
* Clients are disconnected with the DI flag of QUI
* Update to Lua 5.1.4
* Update to boost 1.42
* Better support of Python extensions
* Add an icon and version info to the Windows daemon
* Allow local IPs
* Bloom plugin: filter more TTH searches
* [L#427706] Fix some crashes
* Hub will automatically reject new users if its having bandwidth problems
* [L#502280] Fix Windows service
* Accept relative paths in config files
* [L#518972] Fix python memory leak
 
* Plugins can use timers (see SocketManager::addJob)
* [L#491951] Give unsent messages 10 seconds before disconnecting
* Send IPs of passive users

-- 2.4 2008-10-02 --
* Improve Lua scripts

-- 2.3 2008-09-29 --
* Fix service install on Windows
* Fix plugins not being unloaded correctly
* Use boost asio for sockets instead of home brew
* TLS support
* Fix a few crashes here and there
* Improve Lua scripts

-- 2.2 2008-02-12 --
* access.lua: fixed message type for MSG
* Some minor socket fixes
* Initial Bloom filter implementation
* Fixed 100% cpu / infinite resend bug

-- 2.1 2008-01-06 --
* Initial ADC 1.0 release