@@ -1,6 +1,8 @@
 * Export PluginManager::attention to scripts
 * Update Boost to version 1.44
 * [L#537905] Add redhat init scripts (thanks E_zombie)
+* [L#609436] Fix SCons warnings
+* Save some memory by not pre-allocating read buffer
 
 -- 2.5.2 2010-07-23 --
 * Compiled with C++0x support
